# SATube

./: README.md  install.sh  pyproject.toml  uninstall.sh
satube/: __init__.py  cli.py  config.py  downloader.py  history.py  logger.py  queue.py  utils.py
satube/commands/: audio.py  history.py  info.py  queue.py  settings.py  update.py  video.py
